[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
tokio = { version = "0.2.4", features = ["full"] }
futures = "0.3.0"
#serde = "1.0"
# serde_derive = "1.0"
#serde_json = "1.0"
# httparse = "1.0"
# time = "0.1"
raptor-core = {path = "../raptor-core"}


[[example]]
name = "first"
path = "first.rs"