[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
# httparse = "1.0"
# time = "0.1"
raptor = {path = "../raptor"}


[[example]]
name = "first"
path = "first.rs"