[package]
name = "raptor-core"
version = "0.1.0"
authors = ["Luxiang Lin <linluxiang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raptor-macros = { path = "../raptor-macros" }
async-trait = "0.1.19"
serde = "1.0.103"
# serde_traitobject = "0.2.4"
erased-serde = "0.3.9"
tokio = { version = "0.2.4", features = ["full"] }