[package]
name = "raptor"
version = "0.1.0"
authors = ["Luxiang Lin <linluxiang@gmail.com>"]
edition = "2018"

[lib]
name = "raptor"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.19"
serde = { version="1.0.104", features = ["derive"] }
serde_json = "1.0"
# serde_traitobject = "0.2.4"
erased-serde = "0.3"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
